Add some default runtime flags for java 17